dataexport to a json in the dqa, experimentbuilding without correct dataformat

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "9008"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -359,126 +359,6 @@
      "text": [
       "Sample size for Schädlinge is 4 instead of the wanted sample size of 7. Has not more entries then that.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>146</td>\n",
-       "      <td>52</td>\n",
-       "      <td>91</td>\n",
-       "      <td>46</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>163.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>159</td>\n",
-       "      <td>494</td>\n",
-       "      <td>618</td>\n",
-       "      <td>388</td>\n",
-       "      <td>988.0</td>\n",
-       "      <td>797.0</td>\n",
-       "      <td>935.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>853</td>\n",
-       "      <td>846</td>\n",
-       "      <td>124</td>\n",
-       "      <td>709</td>\n",
-       "      <td>402.0</td>\n",
-       "      <td>380.0</td>\n",
-       "      <td>1052.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>477</td>\n",
-       "      <td>48</td>\n",
-       "      <td>825</td>\n",
-       "      <td>494</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>613.0</td>\n",
-       "      <td>35.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>489</td>\n",
-       "      <td>93</td>\n",
-       "      <td>624</td>\n",
-       "      <td>94</td>\n",
-       "      <td>1057.0</td>\n",
-       "      <td>946.0</td>\n",
-       "      <td>117.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>123</td>\n",
-       "      <td>176</td>\n",
-       "      <td>66</td>\n",
-       "      <td>159</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>455</td>\n",
-       "      <td>70</td>\n",
-       "      <td>555</td>\n",
-       "      <td>992</td>\n",
-       "      <td>381.0</td>\n",
-       "      <td>862.0</td>\n",
-       "      <td>331.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0    1    2    3       4      5       6\n",
-       "0  146   52   91   46   109.0   61.0   163.0\n",
-       "1  159  494  618  388   988.0  797.0   935.0\n",
-       "2  853  846  124  709   402.0  380.0  1052.0\n",
-       "3  477   48  825  494    21.0  613.0    35.0\n",
-       "4  489   93  624   94  1057.0  946.0   117.0\n",
-       "5  123  176   66  159     NaN    NaN     NaN\n",
-       "6  455   70  555  992   381.0  862.0   331.0"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -502,28 +382,128 @@
     "    data_sample_temp.append(data_preprocessed.loc[data_preprocessed[\"hat_schäden\"] == False].sample(n=sample_size, random_state=random_state).index)\n",
     "\n",
     "data_sample = pd.DataFrame(data_sample_temp)\n",
-    "data_sample"
+    "data_sample\n",
+    "testrow = 3\n",
+    "data_test = pd.DataFrame(data_sample[testrow])\n",
+    "data_train = data_sample.loc[:, data_sample.columns != testrow]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[146, 52, 91, 46, 109, 61, 163, 159, 494, 618, 388, 988, 797, 935, 853, 846, 124, 709, 402, 380, 1052, 477, 48, 825, 494, 21, 613, 35, 489, 93, 624, 94, 1057, 946, 117, 123, 176, 66, 159, 455, 70, 555, 992, 381, 862, 331]\n"
+      "[146, 52, 91, 109, 61, 163, 159, 494, 618, 988, 797, 935, 853, 846, 124, 402, 380, 1052, 477, 48, 825, 21, 613, 35, 489, 93, 624, 1057, 946, 117, 123, 176, 66, 455, 70, 555, 381, 862, 331] 39 [46, 388, 709, 494, 94, 159, 992] 7\n"
      ]
     }
    ],
    "source": [
-    "flat = data_sample.to_numpy().flatten()\n",
-    "# list is optional, without it is a numpy array\n",
-    "index_list = list(flat[~np.isnan(flat)].astype(int))\n",
-    "print (index_list)"
+    "def into_list(data):\n",
+    "    flat = data.to_numpy().flatten()\n",
+    "    # list is optional, without it is a numpy array\n",
+    "    index_list = list(flat[~np.isnan(flat)].astype(int))\n",
+    "    return index_list\n",
+    "\n",
+    "datalist_train = into_list(data_train)\n",
+    "datalist_test = into_list(data_test)\n",
+    "print(datalist_train, len(datalist_train), datalist_test, len(datalist_test))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## change to COCO Datastructure\n",
+    "https://cocodataset.org/#format-data\n",
+    "https://github.com/Taeyoung96/Yolo-to-COCO-format-converter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## export data into seperate Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_12128\\749947659.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data[\"image_name\"] = None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extractsublist(originaldata, datalist):\n",
+    "    dataset = originaldata.iloc[datalist]\n",
+    "    return dataset\n",
+    "\n",
+    "def extract_nameending(data):\n",
+    "    \"\"\"Input must have the column: image\"\"\"\n",
+    "    data[\"image_name\"] = None\n",
+    "    for i, row in data.iterrows():\n",
+    "        data.loc[i, \"image_name\"] = row[\"image\"].split(\"/\")[-1]\n",
+    "    data = data.drop(\"image\", axis=1)\n",
+    "    return data\n",
+    "\n",
+    "def export(data, name):\n",
+    "    filename = f\"{name}.json\"\n",
+    "    data.to_json(filename)\n",
+    "\n",
+    "dataexport_train = extractsublist(data, datalist_train)\n",
+    "dataexport_train = extract_nameending(dataexport_train)\n",
+    "dataexport_train.head()\n",
+    "export(dataexport_train, \"Trainingdata\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
