--- a/experimenting/first_experiments.ipynb
+++ b/experimenting/first_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\Michael\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\huggingface_hub\\file_download.py:148: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Michael\\.cache\\huggingface\\hub\\models--facebook--detr-resnet-50. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
       "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked']\n",
       "- This IS expected if you are initializing DetrForObjectDetection from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DetrForObjectDetection from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -146,16 +149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[845.3, 386.9, 1102.25, 463.73]\n",
+      "[847.19, 298.4, 1093.29, 359.54]\n",
+      "[846.5, 815.68, 1097.37, 875.0]\n",
+      "[1092.68, 307.47, 1335.5, 385.39]\n",
+      "[573.83, 563.34, 850.96, 677.42]\n",
+      "[1092.95, 370.19, 1334.24, 444.72]\n",
+      "[846.94, 350.84, 1100.97, 429.94]\n",
+      "[846.28, 745.25, 1090.86, 811.76]\n",
+      "[595.95, 814.88, 832.39, 884.79]\n",
+      "[579.68, 466.76, 852.87, 545.79]\n",
+      "[845.75, 531.48, 1092.19, 613.67]\n",
+      "[842.38, 678.51, 1094.85, 763.49]\n"
+     ]
+    }
+   ],
    "source": [
     "polys = [[854.47, 300.44, 920.71, 613.65], [512.43, 296.58, 606.01, 614.75], [958.31, 319.3, 1027.05, 621.06], [893.3, 300.9, 982.65, 616.84]]\n",
     "\n",
     "with Image.open(\"LB00000510.png\") as im:\n",
     "\n",
     "    draw = ImageDraw.Draw(im)\n",
+    "    # y = [(1121.1928567300467,278.23551354730927),(1121.1928567300467 + 52.5394965665439,278.23551354730927 + 288.9672311159914)]\n",
+    "    # draw.rectangle(y, -1, 128, 10)\n",
     "    for x in boxes:\n",
+    "        print(x)\n",
     "        draw.rectangle(x, -1, 128, 10)\n",
     "    im.show()\n",
     "    #im.save(sys.stdout, \"PNG\")"
@@ -163,83 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[342.93, 599.74, 587.95, 684.94]\n",
       "[845.3, 386.9, 1102.25, 463.73]\n",
-      "[345.82, 767.45, 824.65, 866.63]\n",
       "[847.19, 298.4, 1093.29, 359.54]\n",
-      "[573.6, 323.38, 1052.2, 412.98]\n",
-      "[842.83, 689.06, 1097.72, 762.44]\n",
-      "[842.54, 597.68, 1098.05, 672.84]\n",
-      "[355.41, 665.94, 832.77, 749.95]\n",
-      "[577.64, 325.73, 860.81, 396.52]\n",
-      "[586.94, 254.02, 842.05, 299.75]\n",
-      "[850.41, 788.78, 1293.64, 864.87]\n",
-      "[340.3, 723.95, 597.5, 815.29]\n",
-      "[1104.21, 787.43, 1303.55, 853.06]\n",
       "[846.5, 815.68, 1097.37, 875.0]\n",
-      "[307.15, 261.53, 589.68, 458.37]\n",
-      "[318.13, 297.54, 583.85, 368.54]\n",
       "[1092.68, 307.47, 1335.5, 385.39]\n",
-      "[1098.34, 523.22, 1336.5, 615.97]\n",
-      "[862.04, 815.51, 1303.86, 899.41]\n",
-      "[1104.18, 658.82, 1326.38, 775.96]\n",
-      "[866.13, 443.84, 1324.31, 543.39]\n",
-      "[843.1, 698.18, 1093.32, 768.25]\n",
       "[573.83, 563.34, 850.96, 677.42]\n",
-      "[849.22, 327.72, 1096.77, 387.49]\n",
-      "[325.21, 838.62, 602.7, 930.03]\n",
-      "[575.85, 456.89, 854.36, 518.25]\n",
-      "[1102.31, 585.61, 1336.05, 702.03]\n",
-      "[583.35, 689.17, 833.19, 760.67]\n",
-      "[1096.43, 373.22, 1342.05, 442.42]\n",
       "[1092.95, 370.19, 1334.24, 444.72]\n",
       "[846.94, 350.84, 1100.97, 429.94]\n",
-      "[591.5, 778.8, 826.46, 850.37]\n",
-      "[1091.09, 419.66, 1333.7, 500.4]\n",
       "[846.28, 745.25, 1090.86, 811.76]\n",
-      "[581.22, 492.38, 852.33, 565.74]\n",
-      "[581.27, 306.63, 856.52, 374.48]\n",
-      "[1092.95, 278.79, 1329.26, 357.37]\n",
       "[595.95, 814.88, 832.39, 884.79]\n",
       "[579.68, 466.76, 852.87, 545.79]\n",
-      "[329.92, 660.13, 602.65, 738.74]\n",
-      "[345.56, 695.02, 829.23, 794.32]\n",
-      "[340.55, 561.43, 582.21, 642.24]\n",
       "[845.75, 531.48, 1092.19, 613.67]\n",
-      "[849.86, 490.69, 1099.16, 569.2]\n",
-      "[576.05, 337.66, 859.33, 415.44]\n",
-      "[315.46, 374.19, 587.77, 470.77]\n",
-      "[1102.4, 240.87, 1325.55, 282.7]\n",
-      "[587.28, 743.68, 825.72, 809.52]\n",
-      "[584.09, 435.44, 856.33, 495.56]\n",
-      "[218.43, 188.41, 1438.35, 1002.64]\n",
-      "[846.13, 843.86, 1119.84, 902.18]\n",
-      "[1096.28, 505.64, 1337.88, 637.07]\n",
-      "[329.31, 504.77, 586.67, 598.24]\n",
-      "[345.61, 784.55, 604.0, 861.71]\n",
-      "[579.55, 412.68, 854.31, 465.58]\n",
-      "[323.12, 373.73, 581.71, 457.56]\n",
-      "[1103.53, 770.51, 1318.35, 859.06]\n",
-      "[571.78, 561.44, 848.47, 665.28]\n",
-      "[843.81, 262.03, 1086.93, 306.66]\n",
-      "[1094.03, 845.13, 1321.43, 923.91]\n",
-      "[842.38, 678.51, 1094.85, 763.49]\n",
-      "[844.74, 577.1, 1098.11, 666.49]\n",
-      "[1091.0, 416.29, 1337.94, 508.98]\n",
-      "[850.42, 763.13, 1296.13, 846.11]\n",
-      "[858.31, 440.94, 1100.95, 519.08]\n",
-      "[850.66, 613.22, 1097.94, 682.56]\n",
-      "[848.58, 787.51, 1095.29, 850.02]\n",
-      "[319.33, 431.9, 589.24, 511.7]\n",
-      "[857.67, 254.26, 1302.96, 329.94]\n",
-      "[846.39, 373.43, 1096.22, 438.45]\n"
+      "[842.38, 678.51, 1094.85, 763.49]\n"
      ]
     }
    ],
@@ -258,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
