added coco_data to subset, and creating coco based json files

--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "9008"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,14 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample size for Schädlinge is 4 instead of the wanted sample size of 7. Has not more entries then that.\n"
+      "Sample size for Schädlinge is 4 instead of the wanted sample size of 7. Has not more entries then that.\n",
+      "     0    1    2    3       4      5       6\n",
+      "0  146   52   91   46   109.0   61.0   163.0\n",
+      "1  159  494  618  388   988.0  797.0   935.0\n",
+      "2  853  846  124  709   402.0  380.0  1052.0\n",
+      "3  477   48  825  494    21.0  613.0    35.0\n",
+      "4  489   93  624   94  1057.0  946.0   117.0\n",
+      "5  123  176   66  159     NaN    NaN     NaN\n",
+      "6  455   70  555  992   381.0  862.0   331.0\n"
      ]
     }
    ],
@@ -382,7 +390,7 @@
     "    data_sample_temp.append(data_preprocessed.loc[data_preprocessed[\"hat_schäden\"] == False].sample(n=sample_size, random_state=random_state).index)\n",
     "\n",
     "data_sample = pd.DataFrame(data_sample_temp)\n",
-    "data_sample\n",
+    "print(data_sample)\n",
     "testrow = 3\n",
     "data_test = pd.DataFrame(data_sample[testrow])\n",
     "data_train = data_sample.loc[:, data_sample.columns != testrow]"
@@ -390,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -452,14 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_12128\\749947659.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Michael\\AppData\\Local\\Temp\\ipykernel_7936\\749947659.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -492,18 +500,230 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Export from COCO json file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "import datetime\n",
+    "\n",
+    "path = \"../../../old/BAA/coco_annotations.json\"\n",
+    "\n",
+    "with open(path, \"r\") as f:\n",
+    "    cocox = json.load(f)\n",
+    "\n",
+    "description_train = \"trainingset_small\"\n",
+    "description_test = \"testset_small\"\n",
+    "\n",
+    "cocox\n",
+    "\n",
+    "def createSubsetStructure(originalData, description):\n",
+    "    subsetStructure = {\n",
+    "        \"info\": [{\"year\": int(datetime.date.today().year)},\n",
+    "                {\"version\": \"1.0\"},\n",
+    "                {\"description\": description},\n",
+    "                {\"contributer\": \"Michael Infanger\"},\n",
+    "                {\"url\": \"\"},\n",
+    "                {\"date_created\": str(datetime.datetime.now())}],\n",
+    "        \"categories\": originalData[\"categories\"],\n",
+    "        \"images\": [],\n",
+    "        \"annotations\": []\n",
+    "    }\n",
+    "    return subsetStructure\n",
+    "\n",
+    "def createSubsetImages(subset, cocodata, subsetIDList):\n",
+    "    # change file_name for the actual name without the whole path\n",
+    "    for n in range(len(cocodata[\"images\"])):\n",
+    "        cocodata[\"images\"][n][\"file_name\"] = cocodata[\"images\"][n][\"file_name\"].split(\"/\")[-1]\n",
+    "        if cocodata[\"images\"][n][\"id\"] in subsetIDList:\n",
+    "            subset[\"images\"].append(cocodata[\"images\"][n])\n",
+    "\n",
+    "def createSubsetAnnotations(subset, cocodata, subsetIDList):\n",
+    "    for n in range(len(cocodata[\"annotations\"])):\n",
+    "        cocodata[\"annotations\"][n][\"image_id\"] -= 20000\n",
+    "        if cocodata[\"annotations\"][n][\"image_id\"] in subsetIDList:\n",
+    "            subset[\"annotations\"].append(cocodata[\"annotations\"][n])\n",
+    "\n",
+    "def createCOCOSubset(cocodata, subsetIDList, description):\n",
+    "    cocosub = createSubsetStructure(cocodata, description=description)\n",
+    "    createSubsetImages(cocosub, cocodata, subsetIDList)\n",
+    "    createSubsetAnnotations(cocosub, cocodata, subsetIDList)\n",
+    "    return cocosub\n",
+    "\n",
+    "def writeJson(jsonObject, filename):\n",
+    "    if filename.split(\".\")[-1] != \"json\":\n",
+    "        filename = f\"{filename}.json\"\n",
+    "    with open(filename, \"w\") as g:\n",
+    "        g.write(jsonObject)\n",
+    "\n",
+    "trainset = createCOCOSubset(cocox, datalist_train, description=description_train)\n",
+    "testset = createCOCOSubset(cocox, datalist_test, description=description_test)\n",
+    "\n",
+    "json_train = json.dumps(trainset, indent=4)\n",
+    "json_test = json.dumps(testset, indent=4)\n",
+    "\n",
+    "writeJson(json_train, \"coco_train\")\n",
+    "writeJson(json_test, \"coco_test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(datetime.date.today().year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing = {\"annotations\": []}\n",
+    "for n in range(len(cocox[\"annotations\"])):\n",
+    "    if cocox[\"annotations\"][n][\"image_id\"] in datalist_test:\n",
+    "        print(cocox[\"annotations\"][n])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21709"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cocox[\"images\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20146,\n",
+       " 20052,\n",
+       " 20091,\n",
+       " 20109,\n",
+       " 20061,\n",
+       " 20163,\n",
+       " 20159,\n",
+       " 20494,\n",
+       " 20618,\n",
+       " 20988,\n",
+       " 20797,\n",
+       " 20935,\n",
+       " 20853,\n",
+       " 20846,\n",
+       " 20124,\n",
+       " 20402,\n",
+       " 20380,\n",
+       " 21052,\n",
+       " 20477,\n",
+       " 20048,\n",
+       " 20825,\n",
+       " 20021,\n",
+       " 20613,\n",
+       " 20035,\n",
+       " 20489,\n",
+       " 20093,\n",
+       " 20624,\n",
+       " 21057,\n",
+       " 20946,\n",
+       " 20117,\n",
+       " 20123,\n",
+       " 20176,\n",
+       " 20066,\n",
+       " 20455,\n",
+       " 20070,\n",
+       " 20555,\n",
+       " 20381,\n",
+       " 20862,\n",
+       " 20331]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datalisttrain = [x + 20000 for x in datalist_train]\n",
+    "datalisttrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-10 16:24:32.252953\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "print(str(datetime.datetime.now()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "namenamenamex\n",
+      "namenamenamex.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "def writeJson(jsonObject, filename):\n",
+    "    if filename.split(\".\")[-1] != \"json\":\n",
+    "        filename = f\"{filename}.json\"\n",
+    "\n",
+    "\n",
+    "x = {\"hi\": 42}\n",
+    "writeJson(x, \"namenamenamex\")"
+   ]
   },
   {
    "cell_type": "markdown",
