--- a/dataQualityAssessment/dqa.ipynb
+++ b/dataQualityAssessment/dqa.ipynb
@@ -520,6 +520,7 @@
     "with open(path, \"r\") as f:\n",
     "    cocox = json.load(f)\n",
     "\n",
+    "# Say descriptions\n",
     "description_train = \"trainingset_small\"\n",
     "description_test = \"testset_small\"\n",
     "\n",
@@ -572,157 +573,6 @@
     "\n",
     "writeJson(json_train, \"coco_train\")\n",
     "writeJson(json_test, \"coco_test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(int(datetime.date.today().year))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing = {\"annotations\": []}\n",
-    "for n in range(len(cocox[\"annotations\"])):\n",
-    "    if cocox[\"annotations\"][n][\"image_id\"] in datalist_test:\n",
-    "        print(cocox[\"annotations\"][n])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21709"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(cocox[\"images\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[20146,\n",
-       " 20052,\n",
-       " 20091,\n",
-       " 20109,\n",
-       " 20061,\n",
-       " 20163,\n",
-       " 20159,\n",
-       " 20494,\n",
-       " 20618,\n",
-       " 20988,\n",
-       " 20797,\n",
-       " 20935,\n",
-       " 20853,\n",
-       " 20846,\n",
-       " 20124,\n",
-       " 20402,\n",
-       " 20380,\n",
-       " 21052,\n",
-       " 20477,\n",
-       " 20048,\n",
-       " 20825,\n",
-       " 20021,\n",
-       " 20613,\n",
-       " 20035,\n",
-       " 20489,\n",
-       " 20093,\n",
-       " 20624,\n",
-       " 21057,\n",
-       " 20946,\n",
-       " 20117,\n",
-       " 20123,\n",
-       " 20176,\n",
-       " 20066,\n",
-       " 20455,\n",
-       " 20070,\n",
-       " 20555,\n",
-       " 20381,\n",
-       " 20862,\n",
-       " 20331]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datalisttrain = [x + 20000 for x in datalist_train]\n",
-    "datalisttrain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-04-10 16:24:32.252953\n"
-     ]
-    }
-   ],
-   "source": [
-    "import datetime\n",
-    "print(str(datetime.datetime.now()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "namenamenamex\n",
-      "namenamenamex.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "def writeJson(jsonObject, filename):\n",
-    "    if filename.split(\".\")[-1] != \"json\":\n",
-    "        filename = f\"{filename}.json\"\n",
-    "\n",
-    "\n",
-    "x = {\"hi\": 42}\n",
-    "writeJson(x, \"namenamenamex\")"
    ]
   },
   {
